# pc-keyboard

./: .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: build.yml  clippy.yml  format.yml  release.yml
examples/: decoder.rs  layout.rs  print_keyboard.rs  scancodes.rs
src/: layouts.rs  lib.rs  scancodes.rs  set1.rs
src/layouts/: azerty.rs  colemak.rs  de104.rs  de105.rs  dvorak104.rs  dvorak_programmer104.rs  fi_se105.rs  jis109.rs  mod.rs  no105.rs  uk105.rs  us104.rs
src/scancodes/: mod.rs  set1.rs  set2.rs  usbhid.rs
