[package]
name = "pc-keyboard"
version = "0.8.0"
authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>", "Rust Embedded Community Contributors"]
description = "PS/2 keyboard interface library."
keywords = ["keyboard", "ps2", "scancode", "layout"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-embedded-community/pc-keyboard.git"
edition = "2021"

[dependencies]
